{
    "name": "FightControls",
    "maps": [
        {
            "name": "PlayerStance",
            "id": "f8c04c9a-5958-488d-b81a-07ce765f0b50",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "c668116e-8503-47a6-828c-ef686f6b9943",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "63aecb9e-5528-45f6-81a0-5f890d7fcfbe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StanceRotateMNK",
                    "type": "Value",
                    "id": "032ce7e2-272e-4884-b495-5fff7ffac1e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StanceRotateGP",
                    "type": "Value",
                    "id": "bae30882-ba8c-40ca-919a-ff6b6b1bd0fd",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1bbe94e-0eda-4fc3-8b3d-efd09ee0d31b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f786015-51f3-4928-9dcf-c51f78af55d8",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3671a4b-c197-41e0-86ae-fd4b188fb017",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04da0420-ed42-47d9-9008-6f9665b73e98",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "497e700d-4ce3-4d00-a5f8-1d1954ef197e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StanceRotateMNK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "862a4a75-827f-4697-8098-c06bef8f0350",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StanceRotateGP",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}